Item3740:    * fixed twikiPageForms for FF    * fixed spacings of list elements in sidebar navigation for IE
git-svn-id: http://develop.twiki.org/svn/twiki/branches/MAIN@13088 a00a5322-12db-0310-a70b-8735589c885e

--- a/twikiplugins/NatSkin/pub/TWiki/NatSkin/BaseStyle.css
+++ b/twikiplugins/NatSkin/pub/TWiki/NatSkin/BaseStyle.css
@@ -499,18 +499,17 @@ body { font-size:14px; }
 .natTopicAttachments table {
   width:100%;
 }
+
 .natSideBar .natSkinStyleBrowser ul,
 .natSkinStyleBrowser ul {
   padding-left:0px;
-  margin-top:0px;
-  margin-bottom:10px;
-}
-.natSkinStyleBrowser li  {
+  margin:0px 0px 10px 0px;
   list-style-type: none;
 }
 
-.natSkinStyleBrowser td > select { /* IE freaks on that */
-  width:100%;
+.natSkinStyleBrowser select { 
+  width:100%;/* IE freaks on that */
+  _width:180px;
 }
 
 .natSideBar a.natFeedIcon:hover,
@@ -649,7 +648,7 @@ a.natFeedIcon {
 }
 .twikiPageForm {
   display:table;
-  width:0px; /* IE does not know display:table but this way it somewhat behaves like it */
+  _width:0px; /* IE does not know display:table but this way it somewhat behaves like it */
 }
 .twikiPageForm table th,
 .twikiPageForm table td {
